# pixel-chunk

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  fly.toml  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  state.tsx
frontend/src/components/: color-picker.tsx  grid.tsx  layout.tsx  loading-spinner.css  loading-spinner.tsx
frontend/src/pages/: home.tsx  project.tsx
pixel_chunk/: app.py  dependencies.py  project.py  spa_static_files.py  state.py
pixel_chunk/tests/: test_state.py
pixel_chunk/utils/: color.py  icechunk.py
scripts/: clear_data.py
